--- a/Draw/BBS/Controller/View/BBSPostActionCell.xib
+++ b/Draw/BBS/Controller/View/BBSPostActionCell.xib
@@ -42,6 +42,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{12, 6}, {51, 51}}</string>
 						<reference key="NSSuperview" ref="594756960"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="966452623"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -52,6 +53,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{72, 8}, {149, 21}}</string>
 						<reference key="NSSuperview" ref="594756960"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="351332590"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -83,6 +85,7 @@
 						<int key="NSvFlags">289</int>
 						<string key="NSFrame">{{226, 6}, {86, 21}}</string>
 						<reference key="NSSuperview" ref="594756960"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="683632117"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -111,6 +114,7 @@
 						<int key="NSvFlags">288</int>
 						<string key="NSFrame">{{72, 35}, {205, 45}}</string>
 						<reference key="NSSuperview" ref="594756960"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="658149072"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -119,7 +123,10 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">Content</string>
-						<reference key="IBUITextColor" ref="249638129"/>
+						<object class="NSColor" key="IBUITextColor" id="292415590">
+							<int key="NSColorSpace">3</int>
+							<bytes key="NSWhite">MQA</bytes>
+						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUINumberOfLines">1000</int>
@@ -133,6 +140,7 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{72, 90}, {85, 80}}</string>
 						<reference key="NSSuperview" ref="594756960"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -142,6 +150,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{277, 26}, {43, 29}}</string>
 						<reference key="NSSuperview" ref="594756960"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="12943457"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -149,10 +158,7 @@
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<string key="IBUINormalTitle">CM(3)</string>
-						<object class="NSColor" key="IBUIHighlightedTitleColor" id="292415590">
-							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MQA</bytes>
-						</object>
+						<reference key="IBUIHighlightedTitleColor" ref="292415590"/>
 						<object class="NSColor" key="IBUINormalTitleColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MC4zMzMzMzMzMzMzAA</bytes>
@@ -180,6 +186,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{280, 55}, {38, 27}}</string>
 						<reference key="NSSuperview" ref="594756960"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="188712504"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -210,6 +217,7 @@
 				</array>
 				<string key="NSFrameSize">{320, 180}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="843713007"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -386,7 +394,7 @@
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<object class="IBPartialClassDescription">
 					<string key="className">BBSPostActionCell</string>
-					<string key="superclassName">PPTableViewCell</string>
+					<string key="superclassName">BBSTableViewCell</string>
 					<dictionary class="NSMutableDictionary" key="actions">
 						<string key="clickPayButton:">id</string>
 						<string key="clickRepyButton:">id</string>
@@ -441,6 +449,48 @@
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
+					<string key="className">BBSTableViewCell</string>
+					<string key="superclassName">PPTableViewCell</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="avatar">UIImageView</string>
+						<string key="bgImageView">UIImageView</string>
+						<string key="content">UILabel</string>
+						<string key="image">UIImageView</string>
+						<string key="nickName">UILabel</string>
+						<string key="timestamp">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="avatar">
+							<string key="name">avatar</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="bgImageView">
+							<string key="name">bgImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="content">
+							<string key="name">content</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="image">
+							<string key="name">image</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="nickName">
+							<string key="name">nickName</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="timestamp">
+							<string key="name">timestamp</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/BBSTableViewCell.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
 					<string key="className">PPTableViewCell</string>
 					<string key="superclassName">UITableViewCell</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
@@ -455,8 +505,8 @@
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="comment_reply@2x.png">{16, 16}</string>
-			<string key="green_button@2x.png">{16, 16}</string>
+			<string key="comment_reply@2x.png">{72, 56}</string>
+			<string key="green_button@2x.png">{71, 84}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">1926</string>
 	</data>
