--- a/Draw/Controller/Common/CommonStarryDialog.xib
+++ b/Draw/Controller/Common/CommonStarryDialog.xib
@@ -42,6 +42,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{320, 480}</string>
 						<reference key="NSSuperview" ref="887022054"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="59743781"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -52,13 +53,14 @@
 					</object>
 					<object class="IBUIView" id="59743781">
 						<reference key="NSNextResponder" ref="887022054"/>
-						<int key="NSvFlags">319</int>
+						<int key="NSvFlags">301</int>
 						<array class="NSMutableArray" key="NSSubviews">
 							<object class="IBUIImageView" id="131314975">
 								<reference key="NSNextResponder" ref="59743781"/>
 								<int key="NSvFlags">274</int>
 								<string key="NSFrameSize">{250, 152}</string>
 								<reference key="NSSuperview" ref="59743781"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="887624945"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -72,26 +74,28 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrameSize">{250, 152}</string>
 								<reference key="NSSuperview" ref="59743781"/>
-								<reference key="NSNextKeyView" ref="130876593"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="629992164"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<reference key="IBUIImage" ref="378047949"/>
 							</object>
 							<object class="IBUILabel" id="629992164">
 								<reference key="NSNextResponder" ref="59743781"/>
-								<int key="NSvFlags">293</int>
-								<string key="NSFrame">{{-1, 7}, {250, 29}}</string>
+								<int key="NSvFlags">301</int>
+								<string key="NSFrame">{{0, 7}, {250, 29}}</string>
 								<reference key="NSSuperview" ref="59743781"/>
-								<reference key="NSNextKeyView" ref="131314975"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="130876593"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<string key="IBUIText">退出游戏</string>
-								<object class="NSColor" key="IBUITextColor" id="83560586">
+								<object class="NSColor" key="IBUITextColor">
 									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MCAxIDEAA</bytes>
+									<bytes key="NSRGB">MC42MzUyOTQxMTc2IDAuODExNzY0NzA1OSAwLjAzMTM3MjU0OTAyAA</bytes>
 								</object>
 								<object class="NSColor" key="IBUIHighlightedColor" id="977175967">
 									<int key="NSColorSpace">3</int>
@@ -114,9 +118,10 @@
 							</object>
 							<object class="IBUIButton" id="762229273">
 								<reference key="NSNextResponder" ref="59743781"/>
-								<int key="NSvFlags">269</int>
+								<int key="NSvFlags">301</int>
 								<string key="NSFrame">{{20, 113}, {81, 26}}</string>
 								<reference key="NSSuperview" ref="59743781"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="189298594"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -128,7 +133,10 @@
 								<double key="IBUIImageEdgeInsets.right">0.0</double>
 								<string key="IBUINormalTitle">取消</string>
 								<reference key="IBUIHighlightedTitleColor" ref="977175967"/>
-								<reference key="IBUINormalTitleColor" ref="83560586"/>
+								<object class="NSColor" key="IBUINormalTitleColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MC42MzUyOTQxMTc2IDAuODExNzY0NzA1OSAwLjAzMTM3MjU0OTAyAA</bytes>
+								</object>
 								<reference key="IBUINormalTitleShadowColor" ref="977175967"/>
 								<object class="NSCustomResource" key="IBUINormalImage">
 									<string key="NSClassName">NSImage</string>
@@ -150,10 +158,10 @@
 							</object>
 							<object class="IBUIButton" id="189298594">
 								<reference key="NSNextResponder" ref="59743781"/>
-								<int key="NSvFlags">269</int>
+								<int key="NSvFlags">301</int>
 								<string key="NSFrame">{{149, 113}, {81, 26}}</string>
 								<reference key="NSSuperview" ref="59743781"/>
-								<reference key="NSNextKeyView"/>
+								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -164,7 +172,10 @@
 								<double key="IBUIImageEdgeInsets.right">0.0</double>
 								<string key="IBUINormalTitle">确定</string>
 								<reference key="IBUIHighlightedTitleColor" ref="977175967"/>
-								<reference key="IBUINormalTitleColor" ref="83560586"/>
+								<object class="NSColor" key="IBUINormalTitleColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MC42MzUyOTQxMTc2IDAuODExNzY0NzA1OSAwLjAzMTM3MjU0OTAyAA</bytes>
+								</object>
 								<reference key="IBUINormalTitleShadowColor" ref="977175967"/>
 								<object class="NSCustomResource" key="IBUINormalImage">
 									<string key="NSClassName">NSImage</string>
@@ -179,6 +190,7 @@
 								<int key="NSvFlags">301</int>
 								<string key="NSFrame">{{20, 38}, {210, 62}}</string>
 								<reference key="NSSuperview" ref="59743781"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="762229273"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -186,18 +198,21 @@
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<string key="IBUIText">确定要退出游戏吗？确定要退出游戏吗？</string>
-								<reference key="IBUITextColor" ref="83560586"/>
+								<object class="NSColor" key="IBUITextColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MC42MzUyOTQxMTc2IDAuODExNzY0NzA1OSAwLjAzMTM3MjU0OTAyAA</bytes>
+								</object>
 								<nil key="IBUIHighlightedColor"/>
 								<string key="IBUIShadowOffset">{0, 0}</string>
 								<float key="IBUIMinimumFontSize">10</float>
 								<int key="IBUINumberOfLines">600</int>
-								<int key="IBUILineBreakMode">1</int>
+								<int key="IBUILineBreakMode">0</int>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
-									<int key="type">1</int>
+									<int key="type">2</int>
 									<double key="pointSize">14</double>
 								</object>
 								<object class="NSFont" key="IBUIFont">
-									<string key="NSName">Helvetica</string>
+									<string key="NSName">Helvetica-Bold</string>
 									<double key="NSSize">14</double>
 									<int key="NSfFlags">16</int>
 								</object>
@@ -207,7 +222,8 @@
 						</array>
 						<string key="NSFrame">{{35, 129}, {250, 152}}</string>
 						<reference key="NSSuperview" ref="887022054"/>
-						<reference key="NSNextKeyView" ref="629992164"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="131314975"/>
 						<object class="NSColor" key="IBUIBackgroundColor" id="67415055">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwAA</bytes>
@@ -218,6 +234,7 @@
 				</array>
 				<string key="NSFrameSize">{320, 460}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="500030287"/>
 				<reference key="IBUIBackgroundColor" ref="67415055"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -338,11 +355,11 @@
 						<reference key="object" ref="59743781"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="189298594"/>
-							<reference ref="629992164"/>
 							<reference ref="131314975"/>
 							<reference ref="887624945"/>
 							<reference ref="762229273"/>
 							<reference ref="130876593"/>
+							<reference ref="629992164"/>
 						</array>
 						<reference key="parent" ref="887022054"/>
 					</object>
@@ -405,7 +422,95 @@
 			<nil key="sourceID"/>
 			<int key="maxID">49</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">CommonDialog</string>
+					<string key="superclassName">CommonInfoView</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="backButton">FontButton</string>
+						<string key="contentBackground">UIImageView</string>
+						<string key="frontBackgroundImageView">UIImageView</string>
+						<string key="messageLabel">FontLabel</string>
+						<string key="oKButton">FontButton</string>
+						<string key="titleLabel">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="backButton">
+							<string key="name">backButton</string>
+							<string key="candidateClassName">FontButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="contentBackground">
+							<string key="name">contentBackground</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="frontBackgroundImageView">
+							<string key="name">frontBackgroundImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="messageLabel">
+							<string key="name">messageLabel</string>
+							<string key="candidateClassName">FontLabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="oKButton">
+							<string key="name">oKButton</string>
+							<string key="candidateClassName">FontButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="titleLabel">
+							<string key="name">titleLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/CommonDialog.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">CommonInfoView</string>
+					<string key="superclassName">UIView</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">contentView</string>
+						<string key="NS.object.0">UIView</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">contentView</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">contentView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/CommonInfoView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">FontButton</string>
+					<string key="superclassName">UIGlossyButton</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/FontButton.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">FontLabel</string>
+					<string key="superclassName">UILabel</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/FontLabel.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UIGlossyButton</string>
+					<string key="superclassName">UIButton</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/UIGlossyButton.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
